# PointPillars-ROS

./: .gitignore  README.md  launch-Kin-Nmo.sh  launch-kitti.sh  launch-nusc.sh  launch-test-boolmap.sh  launch-test.sh  launch.sh
src/: launch.sh
src/autoware_build_flags/: package.xml
src/autoware_build_flags/cmake/: autoware_build_flags-extras.cmake
src/autoware_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/autoware_msgs/msg/: DetectedObject.msg
src/build_flags/: CMakeLists.txt  package.xml
src/build_flags/cmake/: build_flags-extras.cmake
src/detected_objects_visualizer/: CMakeLists.txt  package.xml
src/detected_objects_visualizer/src/: visualize_detected_objects.cpp
src/lidar_point_pillars/: CMakeLists.txt  package.xml
src/lidar_point_pillars/cfgs/: cbgs_pp_multihead.yaml  pointpillar_boolmap_multihead.yaml  pointpillar_kitti_g10.yaml  pointpillar_kitti_g11.yaml  pointpillar_test_boolmap.yaml  tx1_ppmh_256x256.yaml
src/lidar_point_pillars/include/: boolvfe.h  point_pillars.h  point_pillars_ros.h  postprocess.h  pp_preprocess.h  preprocess.h  tracker.h
src/lidar_point_pillars/launch/: lidar_point_pillars.launch
src/lidar_point_pillars/nodes/: boolvfe.cu  multi_head.cu  point_pillars.cpp  point_pillars_ros.cpp  postprocess.cu  pp_preprocess.cu  pp_scatter.cu  preprocess.cu  tracker.cpp
src/rviz/: nuscenes.rviz
src/test_point_pillars/: CMakeLists.txt  package.xml
src/test_point_pillars/launch/: test_point_pillars.launch
src/test_point_pillars/nodes/: test_point_pillars_node.cpp
